// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List should render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="dialogContainer"
    />
    <div>
      <div
        data-overlay-container="true"
      >
        <ul
          class="root"
        >
          <li
            class="li"
          >
            <div
              class="mainSection"
            >
              Test
            </div>
          </li>
          <li
            class="li"
          >
            <div
              class="mainSection"
            >
              Test
            </div>
          </li>
          <li
            class="li"
          >
            <div
              class="mainSection"
            >
              Test
            </div>
          </li>
          <li
            class="li"
          >
            <div
              class="mainSection"
            >
              Test
            </div>
          </li>
        </ul>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      data-overlay-container="true"
    >
      <ul
        class="root"
      >
        <li
          class="li"
        >
          <div
            class="mainSection"
          >
            Test
          </div>
        </li>
        <li
          class="li"
        >
          <div
            class="mainSection"
          >
            Test
          </div>
        </li>
        <li
          class="li"
        >
          <div
            class="mainSection"
          >
            Test
          </div>
        </li>
        <li
          class="li"
        >
          <div
            class="mainSection"
          >
            Test
          </div>
        </li>
      </ul>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`List should render with subsection left 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="dialogContainer"
    />
    <div>
      <div
        data-overlay-container="true"
      >
        <ul
          class="root"
        >
          <li
            class="li"
          >
            <div>
              <div
                class="root"
                role="img"
                style="background-image: url();"
              />
            </div>
            <div
              class="mainSection"
            >
              Test
            </div>
          </li>
          <li
            class="li"
          >
            <div>
              <div
                class="root"
                role="img"
                style="background-image: url();"
              />
            </div>
            <div
              class="mainSection"
            >
              Test
            </div>
          </li>
          <li
            class="li"
          >
            <div>
              <div
                class="root"
                role="img"
                style="background-image: url();"
              />
            </div>
            <div
              class="mainSection"
            >
              Test
            </div>
          </li>
          <li
            class="li"
          >
            <div>
              <div
                class="root"
                role="img"
                style="background-image: url();"
              />
            </div>
            <div
              class="mainSection"
            >
              Test
            </div>
          </li>
        </ul>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      data-overlay-container="true"
    >
      <ul
        class="root"
      >
        <li
          class="li"
        >
          <div>
            <div
              class="root"
              role="img"
              style="background-image: url();"
            />
          </div>
          <div
            class="mainSection"
          >
            Test
          </div>
        </li>
        <li
          class="li"
        >
          <div>
            <div
              class="root"
              role="img"
              style="background-image: url();"
            />
          </div>
          <div
            class="mainSection"
          >
            Test
          </div>
        </li>
        <li
          class="li"
        >
          <div>
            <div
              class="root"
              role="img"
              style="background-image: url();"
            />
          </div>
          <div
            class="mainSection"
          >
            Test
          </div>
        </li>
        <li
          class="li"
        >
          <div>
            <div
              class="root"
              role="img"
              style="background-image: url();"
            />
          </div>
          <div
            class="mainSection"
          >
            Test
          </div>
        </li>
      </ul>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`List should render with subsection right 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="dialogContainer"
    />
    <div>
      <div
        data-overlay-container="true"
      >
        <ul
          class="root"
        >
          <li
            class="li"
          >
            <div>
              <div
                class="root"
                role="img"
                style="background-image: url();"
              />
            </div>
            <div
              class="mainSection"
            >
              Test
            </div>
            <div>
              <button
                class="lotta-base-button variant__default lotta-button"
                role="button"
                type="button"
              >
                <span
                  class="lotta-button_text"
                >
                  Test
                </span>
              </button>
            </div>
          </li>
          <li
            class="li"
          >
            <div
              class="mainSection"
            >
              Test
            </div>
            <div>
              <button
                class="lotta-base-button variant__default lotta-button"
                role="button"
                type="button"
              >
                <span
                  class="lotta-button_text"
                >
                  Test
                </span>
              </button>
            </div>
          </li>
          <li
            class="li"
          >
            <div
              class="mainSection"
            >
              Test
            </div>
            <div>
              <button
                class="lotta-base-button variant__default lotta-button"
                role="button"
                type="button"
              >
                <span
                  class="lotta-button_text"
                >
                  Test
                </span>
              </button>
            </div>
          </li>
          <li
            class="li"
          >
            <div
              class="mainSection"
            >
              Test
            </div>
            <div>
              <button
                class="lotta-base-button variant__default lotta-button"
                role="button"
                type="button"
              >
                <span
                  class="lotta-button_text"
                >
                  Test
                </span>
              </button>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      data-overlay-container="true"
    >
      <ul
        class="root"
      >
        <li
          class="li"
        >
          <div>
            <div
              class="root"
              role="img"
              style="background-image: url();"
            />
          </div>
          <div
            class="mainSection"
          >
            Test
          </div>
          <div>
            <button
              class="lotta-base-button variant__default lotta-button"
              role="button"
              type="button"
            >
              <span
                class="lotta-button_text"
              >
                Test
              </span>
            </button>
          </div>
        </li>
        <li
          class="li"
        >
          <div
            class="mainSection"
          >
            Test
          </div>
          <div>
            <button
              class="lotta-base-button variant__default lotta-button"
              role="button"
              type="button"
            >
              <span
                class="lotta-button_text"
              >
                Test
              </span>
            </button>
          </div>
        </li>
        <li
          class="li"
        >
          <div
            class="mainSection"
          >
            Test
          </div>
          <div>
            <button
              class="lotta-base-button variant__default lotta-button"
              role="button"
              type="button"
            >
              <span
                class="lotta-button_text"
              >
                Test
              </span>
            </button>
          </div>
        </li>
        <li
          class="li"
        >
          <div
            class="mainSection"
          >
            Test
          </div>
          <div>
            <button
              class="lotta-base-button variant__default lotta-button"
              role="button"
              type="button"
            >
              <span
                class="lotta-button_text"
              >
                Test
              </span>
            </button>
          </div>
        </li>
      </ul>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
